* Thu May 02 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.3.1-0
- Fix a breaking change inadvertantly introduced into auditd::rule
  in which the auditd class was no longer included when an auditd::rule
  was defined in a manifest.

* Thu Apr 25 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.3.0-0
- Added a `custom` audit profile that accepts either an Array of rules or a
  template path for ease of setting full rulesets via Hiera.
- Updated all module components for `puppet strings`
- Fixed the README
- Added a REFERENCE.md
- Refactored the filename logic in the base profiles to be simpler
- Converted the rule template to EPP
- Converted the rotated_audit_logs template to EPP
- Converted STIG audit profile template to EPP
- Converted SIMP audit profile template to EPP

* Wed Apr 10 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 8.2.1-0
- Ensure that space_left is always larger than admin_space_left
- Updated tests in support of puppet6, and removed puppet4 support
- Updated puppet template scope API from 3 to newer

* Sat Apr 06 2019 Jim Anderson <thesemicolons@protonmail.com> - 8.2.1-0
- config.pp now managed /etc/audit in addition to /etc/audit/rules.d.
  The permissions and ownership of the two directories should be the
  same. Both directories use purge and recurse.

* Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.2.1-0
- Use Puppet Integer in lieu of simplib's deprecated Puppet 3 to_integer
- Expanded the upper limit of the stdlib Puppet module version
- Updated a URL in the README.md

* Tue Jan 15 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.2.0-0
- Allow users to optimize their audit processing by only collecting on specific
  SELinux types

* Fri Jan 11 2019 Adam Yohrling <adam.yohrling@onyxpoint.com> - 8.2.0-0
- Add restorecon audit for STIG profile

* Fri Nov 16 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.2.0-0
- Update to remove potentially redundant test code and use the updated
  simp-beaker-helpers
