@@ -1,3 +1,7 @@
+* Tue Jun 25 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.3.2-0
+- Fix an issue where trailing newlines may not be present on custom rule
+  profiles, particularly with rules defined in an Array.
+
 * Thu May 02 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.3.1-0
 - Fix a breaking change inadvertantly introduced into auditd::rule
   in which the auditd class was no longer included when an auditd::rule
